@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.5.6"
+  "version": "3.2.5.7"
 }
