@@ -450,6 +450,7 @@
     "*://*.newstatesman.com/*",
     "*://*.newsweek.com/*",
     "*://*.newyorker.com/*",
+    "*://*.niagarafallsreview.ca/*",
     "*://*.nicematin.com/*",
     "*://*.nikkei.com/*",
     "*://*.nj.com/*",
@@ -575,6 +576,7 @@
     "*://*.startribune.com/*",
     "*://*.statesman.com/*",
     "*://*.statista.com/*",
+    "*://*.stcatharinesstandard.ca/*",
     "*://*.stocknews.com/*",
     "*://*.studocu.com/*",
     "*://*.stuttgarter-nachrichten.de/*",
@@ -625,10 +627,13 @@
     "*://*.thenation.com/*",
     "*://*.thenewatlantis.com/*",
     "*://*.theneweuropean.co.uk/*",
+    "*://*.thepeterboroughexaminer.com/*",
     "*://*.thepointmag.com/*",
     "*://*.theprovince.com/*",
     "*://*.thequint.com/*",
+    "*://*.therecord.com/*",
     "*://*.thesaturdaypaper.com.au/*",
+    "*://*.thespec.com/*",
     "*://*.thespectator.com/*",
     "*://*.thestar.com.my/*",
     "*://*.thestar.com/*",
@@ -680,6 +685,7 @@
     "*://*.watoday.com.au/*",
     "*://*.waz.de/*",
     "*://*.weeklytimesnow.com.au/*",
+    "*://*.wellandtribune.ca/*",
     "*://*.westernadvocate.com.au/*",
     "*://*.westfalen-blatt.de/*",
     "*://*.wiesbadener-kurier.de/*",
@@ -744,5 +750,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.5.6"
+  "version": "3.2.5.7"
 }
